Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/SFDC_MDF_Claim__c.object-meta.xml
<CustomObject>
    <description>A set of claims tied to a specific request. Each claim is approved individually and tracks partner proof of performance. Claims can be analyzed by the claim age in days.</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>FC-{00000000}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>