Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description>The total amount of the claim approved.</description>
    <label>Approved Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>