Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_Name__c.field-meta.xml
<CustomField>
    <fullName>Claim_Name__c</fullName>
    <description>Optional field which is more descriptive than the automatically assigned claim number</description>
    <label>Claim Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>