Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Payee_Information__c.field-meta.xml
<CustomField>
    <fullName>Payee_Information__c</fullName>
    <description>Alternate payee</description>
    <label>Payee Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>