Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Percent_Approved__c.field-meta.xml
<CustomField>
    <fullName>Percent_Approved__c</fullName>
    <formula>Approved_Amount__c /  Requested_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Approved</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>