Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Performance_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Verified_Date__c</fullName>
    <description>POP Verified Date</description>
    <label>Performance Verified Date</label>
    <type>Date</type>
</CustomField>