Doc/force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Update_Budget__c.field-meta.xml
<CustomField>
    <fullName>Update_Budget__c</fullName>
    <formula>case(SFDC_Channel_Budget__c, &quot;&quot;, &quot;&quot;, HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N30000000D0Mw&amp;eid=&quot; &amp;  SFDC_Channel_Budget__c , IMAGE(&quot;/servlet/servlet.FileDownload?file=0153000000074DG&quot;, &quot;Update Budget&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Budget</label>
    <type>Text</type>
</CustomField>